--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
 
 </head>
 
-  <!--<body background="https://www.letsdown.cn/other/API/random_pic_scape.php" >-->
-    <body style=" background-repeat:no-repeat; background-size:100% 100%;background-attachment: fixed; " background="https://stlcdn.letsdown.cn/gh/VirtualHotBar/pic/picture/img/202206180843381.png" >
+  <!--<https://stlcdn.letsdown.cn/gh/VirtualHotBar/pic/picture/img/202206180843381.png" >-->
+    <body style=" background-repeat:no-repeat; background-size:100% 100%;background-attachment: fixed; " background="https://api.hotpe.top/pic/random/fongjing" >
+
 <br><br><br><br><br>
 
     <p style="text-align: center;">
