--- a/index.html
+++ b/index.html
@@ -11,15 +11,16 @@
 
 </head>
 
-  <!--<https://stlcdn.letsdown.cn/gh/VirtualHotBar/pic/picture/img/202206180843381.png" >-->
+  <!--<body background="https://stlcdn.letsdown.cn/gh/VirtualHotBar/pic/picture/img/202206180843381.png" >-->
     <body style=" background-repeat:no-repeat; background-size:100% 100%;background-attachment: fixed; " background="https://api.hotpe.top/pic/random/fongjing" >
+
 
 <br><br><br><br><br>
 
     <p style="text-align: center;">
         <img  src="https://stlcdn.letsdown.cn/gh/VirtualHotBar/pic/picture/img/202206181042316.png" />
-        <h1 align="center">Let's Down</h1>
-        <h4 align="center">致力打造最纯净的资源分享社区，还互联网一片净土！</h4>
+        <h1 align="center" style="color:rgb(255, 255, 255)">Let's Down</h1>
+        <h4 align="center" style="color:rgb(255, 255, 255)">致力打造最纯净的资源分享社区，还互联网一片净土！</h4>
         <br>
     </p>    
   <!-- 下方按钮 -->
@@ -27,7 +28,7 @@
 
 
   <div align="center" class="footer">
-    —— 链接 ——
+    <a style="color:rgb(255, 255, 255)">—— 链接 ——</a>
     <br>
     <a href="https://down.letsdown.cn/">文件储存-Alist </a> ·
     <a href="https://file.letsdown.cn/">文件储存-OneManager </a> · 
