--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 
   <!--<body background="https://stlcdn.letsdown.cn/gh/VirtualHotBar/pic/picture/img/202206180843381.png" >-->
-    <body style=" background-repeat:no-repeat; background-size:100% 100%;background-attachment: fixed; " background="https://api.hotpe.top/pic/random/fongjing" >
+    <body style=" background-repeat:no-repeat; background-size:100% 100%;background-attachment: fixed; " background="https://api-v1-vc.hotpe.top/pic/random/fongjing" >
 
 
 <br><br><br><br><br>
